electronを読み込むようファイルパス修正

--- a/src/electron/renderer/index.html
+++ b/src/electron/renderer/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Your Electron App</title>
-</head>
-<body>
-  <h1>Hello from Electron!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    
+    <title>Hello from Electron renderer!</title>
+  </head>
+  <body>
+    <h1>Hello from Electron renderer!</h1>
+    <p>👋</p>
+  </body>
 </html>
