--- a/src/electron/renderer/index.html
+++ b/src/electron/renderer/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    
-    <title>Hello from Electron renderer!</title>
+  <head> 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Compressor Service</title>
   </head>
   <body>
-    <h1>Hello from Electron renderer!</h1>
-    <p>👋</p>
-  </body>
+      <h1>Hello from Electron renderer!</h1>
+      <p>👋</p>
+      <div id="app">
+    </div>
+    <script type="module" src="../../../dist/electron/renderer/renderer.js"></script>
+</body>
 </html>
