--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Compressor Service</title>
+    <link href="./src/electron/renderer/styls.css" rel="stylesheet">
   </head>
   <body>
-      <h1>Hello from Electron renderer!</h1>
-      <p>👋</p>
-      <div id="app">
+  
+    <div id="app">
     </div>
-    <script type="module" src="../../../dist/electron/renderer/renderer.js"></script>
+    <!-- <script type="module" src="../../../dist/electron/renderer/renderer.js"></script> -->
+    <script type="module" src="./dist/electron/renderer/renderer.js"></script>
 </body>
 </html>
